Fix Javadoc generation under JDK11.
...by adding `--add-exports` configuration.

Javadoc generation is part of the release process but not the CI. (So arguably we should make it—and the rest of the release processs—part of the CI, as Javadoc generation already is for some of our other projects. One thing at a time... :))

(It's possible that this change is an abuse of `additionalJOptions`, as these options are not `-J` options. But I don't see anywhere else to put them. I'm not sure why Error Prone seemingly doesn't have this problem. Could `maven-javadoc-plugin` be automatically picking up the `compilerArgs` from `maven-compiler-plugin`, similar to how it picks up `source` from that plugin (cl/488902996)? And I guess we get away without the `--add-exports` in compile-testing because we set `source` to `8`? But then `maven-javadoc-plugin` _doesn't_ pick up its `source` value in the case of compile-testing because... something?)

(This CL results in a spam of "[WARNING] javadoc: warning - The code being documented uses modules but the packages defined in https://docs.oracle.com/javase/8/docs/api/ are in the unnamed module." lines. _One thing at a time_ :))

RELNOTES=n/a
PiperOrigin-RevId: 494805776